# tune

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
scripts/: eval_llama.py  finetune.py  infer_phi_winogrande.py  inference.py
src/tune/: eval.py  models.py  tasks.py
src/tune/prompt/: __init__.py  winogrande.py
src/tune/tasks/: __init__.py  base.py  winogrande.py
src/tune/utils/: __init__.py
tests/: test_models.py  test_prompt.py  test_task.py
