[tool.poetry]
name = "tune"
version = "0.1.0"
description = "Pipeline for fine tuning LLMs on Winogrande task using the HuggingFace ecosystem"
authors = ["menamerai <rphananh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.39.0"
datasets = "^2.18.0"
torch = {version = "^2.2.1+cu121", source = "pytorch-gpu-src"}
wandb = "^0.16.4"
hydra-core = "^1.3.2"
pytest = "^8.1.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
